--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     position: fixed;
     left: 10px;
     top: 10px;
+    z-index: 100;
     border-radius: 5px;
     box-shadow: 0px 1px 2px 1px rgb(0 0 0 / 20%);
     display: flex;
@@ -56,6 +57,7 @@
     position: absolute;
     top: 65px;
     left: 70px;
+    z-index: 100;
     background: #eee;
     border-radius: 5px;
     box-shadow: 0px 1px 2px 1px rgb(0 0 0 / 20%);
@@ -108,4 +110,12 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+
+
+.selection-area{
+    position: absolute;
+    border-radius: 3px;
+    background: rgba(196, 213, 224, 0.3);
+    border: 2px solid rgba(196, 213, 224, 0.6);
 }
